--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
     "version": 2,
     "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/api"
-        }
+      {
+        "source": "/api/(.*)",
+        "destination": "/api"
+      },
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
     ]
-}
+  }
+  
