--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": " tsc -b &&  vite build ",
-    "server:build": "concurrently \"tsc\"  ",
+    "server:build": "cd server && tsc",
     "server:start": "concurrently \"node dist/index.js\"",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.10",
+    "axios": "^1.7.9",
     "concurrently": "^9.1.2",
     "express": "^4.21.2",
     "react": "^18.3.1",
@@ -31,6 +32,6 @@
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.11"
   }
 }
